--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 </head>
 
 <body class="site">
+  <div class="about">
+    <object data="/static/karpatski_vovky_logo.svg" type="image/svg+xml"></object>
+    <p>#КВ</p>
+  </div>
     <main class="site-content">
         <div id="root"></div>
     </main>
-    <script src="bundle.js"></script>
+    <script src="static/bundle.js"></script>
 </body>
 
 </html>
