--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main class="site-content">
         <div id="root"></div>
     </main>
-    <script src="static/bundle.js"></script>
+    <script src="bundle.js"></script>
 </body>
 
 </html>
