--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>MemoGame</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel=stylesheet>
     <link href=https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css rel=stylesheet>
+    <link rel="stylesheet" href="index.css" media="screen" title="no title">
 </head>
 
 <body class="site">
