--- a/index.html
+++ b/index.html
@@ -2,21 +2,29 @@
 <html>
 
 <head>
-    <title>MemoGame</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel=stylesheet>
-    <link href=https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css rel=stylesheet>
-    <link rel="stylesheet" href="index.css" media="screen" title="no title">
+  <title>MemoGame</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600"
+        rel=stylesheet>
+  <link href=https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css
+        rel=stylesheet>
+  <link rel="stylesheet"
+        href="index.css"
+        media="screen"
+        title="no title">
 </head>
 
 <body class="site">
   <div class="about">
-    <object data="/static/karpatski_vovky_logo.svg" type="image/svg+xml"></object>
+    <object data="/static/karpatski_vovky_logo.svg"
+            type="image/svg+xml"></object>
     <p>#КВ</p>
   </div>
-    <main class="site-content">
-        <div id="root"></div>
-    </main>
-    <script src="bundle.js"></script>
+  <main class="site-content">
+    <div id="root"></div>
+  </main>
+  <script src="bundle.js"></script>
+  <script src="analytic.js"></script>
+
 </body>
 
 </html>
